data/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Access__c</fullName>
        <description>Some Description</description>
        <inlineHelpText>Some Help Text</inlineHelpText>
        <label>Access#</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <inlineHelpText>The assigned branch of the account</inlineHelpText>
        <label>Branch</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Text_del__c</fullName>
        <formula>PersonEmail</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Opportunities__c</fullName>
        <description>Sriram: Will contain count of open opportunities for this account record</description>
        <inlineHelpText>Venkatraman: Will contain count of open opportunities for this account record</inlineHelpText>
        <label>Open Opportunities</label>
        <summaryFilterItems>
            <field>Opportunity.IsClosed</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tax_ID__c</fullName>
        <label>Tax ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <picklist>
            <picklistValues>
                <fullName>Tier 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Top_Level__c</fullName>
        <inlineHelpText>top level in the partner hierarchy</inlineHelpText>
        <label>Top Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ultimate_Parent_Level__c</fullName>
        <formula>IF(NOT(ISBLANK(Parent.Parent.Parent.Parent.Parent.Name)), &apos;05&apos;, 
IF(NOT(ISBLANK(Parent.Parent.Parent.Parent.Name)), &apos;04&apos;, 
IF(NOT(ISBLANK(Parent.Parent.Parent.Name)), &apos;03&apos;, 
IF(NOT(ISBLANK(Parent.Parent.Name)), &apos;02&apos;, 
IF(NOT(ISBLANK(Parent.Name)), &apos;01&apos;, 
&apos;00&apos;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ultimate Parent Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ultimate_Parent__c</fullName>
        <formula>IF(NOT(ISBLANK(Parent.Parent.Parent.Parent.Parent.Name)), Parent.Parent.Parent.Parent.Parent.Id, 
IF(NOT(ISBLANK(Parent.Parent.Parent.Parent.Name)), Parent.Parent.Parent.Parent.Id, 
IF(NOT(ISBLANK(Parent.Parent.Parent.Name)), Parent.Parent.Parent.Id, 
IF(NOT(ISBLANK(Parent.Parent.Name)), Parent.Parent.Id, 
IF(NOT(ISBLANK(Parent.Name)),Parent.Id, 
Id)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ultimate Parent</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
        <columns>ACCOUNT.TYPE</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Standard_Account</fullName>
        <active>true</active>
        <label>Standard Account</label>
    </recordTypes>
</CustomObject>